# saaki-ros2-yolo

./: .gitignore  LICENSE  README.md  README_es.md  package.xml  setup.cfg  setup.py
config/: yolo_params.yaml
launch/: saaki_ros2_yolo.launch.py
resource/: saaki_ros2_yolo
saaki_ros2_yolo/: __init__.py  yolo_detector_node.py
